Migrate to multi-provider LLM architecture with direct API support
BREAKING CHANGES:
- GOOGLE_API_KEY renamed to GEMINI_API_KEY
- Model configurations now require provider field
- Default models changed (gpt-5.1→gpt-4-turbo, gemini-3-pro→gemini-2.5-flash, claude-sonnet-4.5-20250929→claude-sonnet-4-5-20250929)

Backend:
- Implemented unified LLMClient with provider-specific adapters (OpenAI, Anthropic, Google, OpenRouter)
- Added automatic fallback to OpenRouter when direct API keys unavailable
- Converted COUNCIL_MODELS and CHAIRMAN_MODEL to dict format with provider/display_name
- Made config paths absolute relative to llm-council directory (location-independent)
- Enhanced error handling with structured logging
- Migrated from openrouter.py monolith to provider-agnostic llm_client.py

Documentation:
- Added Docker deployment guide with stdio transport requirements
- Documented provider system benefits (latency, cost, reliability)
- Added migration strategy for gradual provider adoption
- Expanded troubleshooting with provider-specific debugging
- Updated API key configuration for all providers
- Added new provider integration guide

Configuration:
- Updated .gitignore for Flutter/Dart, Python backend, Cloud, IDE, OS files
- Removed CLAUDE.md deletion
- Added .claude/, .serena/, .claude-flow/, .swarm/ to ignore list

Technical Details:
- OpenAI: Direct chat completions API
- Anthropic: System message extraction to separate parameter
- Google Gemini: Contents/parts format translation
- All providers: Graceful degradation on missing keys

Migration Path:
1. Add GEMINI_API_KEY (renamed from GOOGLE_API_KEY)
2. Update model configs with provider field
3. Deploy via Docker or local Python
4. Monitor logs for fallback usage

Fixes: N/A
Closes: N/A

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,118 @@
-# Python-generated files
-__pycache__/
-*.py[oc]
-build/
-dist/
-wheels/
-*.egg-info
+# Flutter/Dart
+*.dart_tool/
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+/build/
+*.iml
+*.ipr
+*.iws
+.idea/
+*.swp
+.DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
+migrate_working_dir/
 
-# Virtual environments
-.venv
+# Android
+**/android/app/debug
+**/android/app/profile
+**/android/app/release
+**/android/.gradle
+**/android/captures/
+**/android/gradlew
+**/android/gradlew.bat
+**/android/local.properties
+**/android/**/GeneratedPluginRegistrant.*
+**/android/key.properties
+*.jks
+*.keystore
 
-# Keys and secrets
-.env
+# iOS/macOS
+**/ios/Flutter/.last_build_id
+**/ios/Pods/
+**/ios/.symlinks/
+**/ios/profile
+**/ios/build/
+**/macos/Flutter/ephemeral
+**/macos/Pods/
+**/macos/.symlinks/
+**/macos/build/
 
-# Data files
-data/
+# Dart Code Generation
+*.g.dart
+*.freezed.dart
+*.gr.dart
+*.config.dart
+*.mocks.dart
 
-# Frontend
-frontend/node_modules/
-frontend/dist/
-frontend/.vite/
+# Coverage
+coverage/
+*.lcov
+
+# Python Backend
+backend/__pycache__/
+backend/**/__pycache__/
+backend/*.pyc
+backend/.pytest_cache/
+backend/.mypy_cache/
+backend/.coverage
+backend/htmlcov/
+backend/*.egg-info/
+backend/dist/
+backend/build/
+backend/venv/
+backend/.venv/
+backend/env/
+backend/.env
+*.env
+!backend/.env.example
+
+# Google Cloud
+service_account.json
+**/service_account.json
+*.json.enc
+credentials.json
+
+# IDE
+.vscode/
+*.code-workspace
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+*~
+*.swp
+*.swo
+
+# Logs
+*.log
+logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local development
+local.properties
+*.local
+.env.local
+.env.*.local
+
+# Claude Flow
+.claude-flow/
+.swarm/
+.claude/tdd-guard/
+.metadata
